--- a/index.html
+++ b/index.html
@@ -4,7 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Diego Cabulo Profile</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <div class="container">
+        <nav>
+          <img
+            src="assets/logo-dcab.PNG"
+            alt="logo-profile"
+            class="logo-profile"
+          />
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Services</a>
+            </li>
+            <li>
+              <a href="#">Portafolio</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <article class="header-text">
+          <p>Software engineer | Fullstack Developer</p>
+          <h1>
+            Hello, I'm <span>Diego</span><br />
+            Cábulo from Colombia
+          </h1>
+        </article>
+      </div>
+    </header>
+    <section id="about"></section>
+  </body>
 </html>
