feat: Services section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diego Cabulo Profile</title>
+    <script
+      src="https://kit.fontawesome.com/b5c2e18c71.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -106,6 +110,47 @@
             </div>
           </article>
         </div>
+      </div>
+    </section>
+    <!-- -----Services---------- -->
+    <section id="services">
+      <div class="container">
+        <h2>My services</h2>
+        <article class="services-list">
+          <div>
+            <i class="fas fa-code"></i>
+            <h3>Software Engineer</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+              illo fugiat ipsa unde provident ea nisi vitae, magni tempora.
+              Nulla nisi adipisci consectetur fugit odit quisquam mollitia,
+              pariatur natus eius.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-crop-simple"></i>
+            <h3>Fullstack Developer</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+              illo fugiat ipsa unde provident ea nisi vitae, magni tempora.
+              Nulla nisi adipisci consectetur fugit odit quisquam mollitia,
+              pariatur natus eius.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-brands fa-app-store"></i>
+            <h3>Test Automation Engineer</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+              illo fugiat ipsa unde provident ea nisi vitae, magni tempora.
+              Nulla nisi adipisci consectetur fugit odit quisquam mollitia,
+              pariatur natus eius.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+        </article>
       </div>
     </section>
 
