feat: portafolio section

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- -----Services---------- -->
     <section id="services">
       <div class="container">
-        <h2>My services</h2>
+        <h2>My Services</h2>
         <article class="services-list">
           <div>
             <i class="fas fa-code"></i>
@@ -151,6 +151,87 @@
             <a href="#">Learn more</a>
           </div>
         </article>
+      </div>
+    </section>
+    <!-- -----Portafolio---------- -->
+    <section id="portafolio">
+      <div class="container">
+        <h2>My Work</h2>
+        <article class="work-list">
+          <div class="work">
+            <img src="assets/work-1.png" alt="my work image one" />
+            <div class="layer">
+              <h4>Social Media App</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                odio quis, ipsa reprehenderit aspernatur amet commodi
+                repudiandae tempore quos. Ab, esse pariatur. Nemo accusantium ea
+                ducimus alias ab aut esse!
+              </p>
+              <a href="#"><i class="fa-solid fa-link"></i></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="assets/work-2.png" alt="my work image one" />
+            <div class="layer">
+              <h4>Second work</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                odio quis, ipsa reprehenderit aspernatur amet commodi
+                repudiandae tempore quos. Ab, esse pariatur. Nemo accusantium ea
+                ducimus alias ab aut esse!
+              </p>
+              <a href="#"><i class="fa-solid fa-link"></i></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="assets/work-3.png" alt="my work image one" />
+            <div class="layer">
+              <h4>Third work</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                odio quis, ipsa reprehenderit aspernatur amet commodi
+                repudiandae tempore quos. Ab, esse pariatur. Nemo accusantium ea
+                ducimus alias ab aut esse!
+              </p>
+              <a href="#"><i class="fa-solid fa-link"></i></a>
+            </div>
+          </div>
+        </article>
+        <a href="#" class="btn-see-more">See More</a>
+      </div>
+    </section>
+    <!-- -----Portafolio---------- -->
+    <section id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="contact-left">
+            <h2>Contact Me</h2>
+            <p>gcabulo@gmail.com</p>
+            <div class="social-icons">
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+            </div>
+          </div>
+          <div class="contact-right">
+            <form action="">
+              <input type="text" name="Name" placeholder="Your Name" required />
+              <input
+                type="email"
+                name="email"
+                placeholder="Your Email"
+                required
+              />
+              <textarea
+                name="Message"
+                rows="6"
+                placeholder="Your Message"
+              ></textarea>
+              <button type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
       </div>
     </section>
 
