feat: contact section

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
           />
           <ul>
             <li>
-              <a href="#">Home</a>
+              <a href="#header">Home</a>
             </li>
             <li>
-              <a href="#">About</a>
+              <a href="#about">About</a>
             </li>
             <li>
-              <a href="#">Services</a>
+              <a href="#services">Services</a>
             </li>
             <li>
-              <a href="#">Portafolio</a>
+              <a href="#portafolio">Portafolio</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="#contact">Contact</a>
             </li>
           </ul>
         </nav>
@@ -198,7 +198,7 @@
             </div>
           </div>
         </article>
-        <a href="#" class="btn-see-more">See More</a>
+        <a href="#" class="btn">See More</a>
       </div>
     </section>
     <!-- -----Portafolio---------- -->
@@ -207,7 +207,7 @@
         <div class="row">
           <div class="contact-left">
             <h2>Contact Me</h2>
-            <p>gcabulo@gmail.com</p>
+            <p><i class="fa-solid fa-paper-plane"></i>gcabulo@gmail.com</p>
             <div class="social-icons">
               <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
               <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -228,11 +228,17 @@
                 rows="6"
                 placeholder="Your Message"
               ></textarea>
-              <button type="submit">Submit</button>
+              <button type="submit" class="btn btn2">Submit</button>
             </form>
           </div>
         </div>
       </div>
+      <footer class="copyright">
+        <p>
+          Copyright Diego. Made with <i class="fa-solid fa-heart"></i> by Diego
+          Cabulo
+        </p>
+      </footer>
     </section>
 
     <script src="src/index.js"></script>
