--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             alt="logo-profile"
             class="logo-profile"
           />
-          <ul>
+          <ul id="side-menu">
             <li>
               <a href="#header">Home</a>
             </li>
@@ -36,7 +36,9 @@
             <li>
               <a href="#contact">Contact</a>
             </li>
+            <i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
           </ul>
+          <i class="fa-solid fa-bars" onclick="openMenu()"></i>
         </nav>
         <article class="header-text">
           <p>Software engineer | Fullstack Developer</p>
