feat: personal inital info

--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
           <article class="about-col-2">
             <h2>About Me</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae voluptatem nobis odio vitae beatae consequatur!
-              Facilis in enim cum nam repellat placeat corporis sunt cumque,
-              pariatur fugiat veritatis quibusdam reiciendis!
+              I have been working in software and web development since 2019, Im
+              a fullstack stack developer and test automation engineer. I also
+              like to learn about python and java development. I worked remotly
+              at Linktic S.A.S as a fullstack developer and right now i work at
+              Globant.com as a Test automation engineer.
             </p>
 
             <div class="tab-titles">
@@ -77,36 +78,63 @@
             <div class="tab-contents active-tab" id="skills">
               <ul>
                 <li>
-                  <span>Software Engineer</span><br />Design Web/Mobile
-                  applications with cloud services
+                  <span>Software Engineer</span><br />Create API rest
+                  applications in Python and JAVA with cloud services.
                 </li>
                 <li>
-                  <span>Fullstack Developer</span><br />Design Web/App
-                  applications and friendly APIs
+                  <span>Fullstack Developer</span><br />Design Web/mobile
+                  applications.
                 </li>
                 <li>
                   <span>Test Automation Engineer</span><br />
-                  Testing services that ensure high-quality products
+                  Test applications and services using automated scripts
                 </li>
               </ul>
             </div>
             <div class="tab-contents" id="experience">
               <ul>
-                <li><span>experience</span><br />first experience</li>
-                <li><span>experience 2</span><br />second experience</li>
                 <li>
-                  <span>experience 3</span><br />
-                  thir experience
+                  <span>Test Automation Engineer at Globant.com</span><br />At
+                  globant my daily tasks involve performing integration tests
+                  for the client and proposing test scenarios that are priority
+                  for the application. The tests can be for web applications,
+                  mobile or APIs. Finally, we use CI/CD tools with jenkins
+                  implementations.
+                </li>
+                <li>
+                  <span>Fullstack Stack Developer at Linktic S.A.S</span
+                  ><br />At LINKTIC my job is to perform serverless functions
+                  (Lambdas AWS), perform tests and maintain them. Building cloud
+                  infrastructure with the help of the AWS cloudFormation
+                  service. Additionally, creation of key-value tables like
+                  DYNAMODB. Finally, automate the report generation using tools
+                  such as SQS, API gateway, ECS, OpenSearch and lambda functions
+                  for the client requirements all of this task are written in
+                  PYTHON and TYPESCRIPT.<br /><br />
+                  Another part of my task is help to build interfaces in react
+                  js and vue js in the front-end area.
+                </li>
+                <li>
+                  <span>Junior developer at Talent.com </span><br />
+                  At talent.com I am supporting the development of web pages in
+                  the front-end area, creating modern components using REACT.js,
+                  additionally in the layout process assigning styles to
+                  specific components of the application using CSS and HTML.
                 </li>
               </ul>
             </div>
             <div class="tab-contents" id="education">
               <ul>
-                <li><span>eduaction 1</span><br />Education</li>
-                <li><span>eduaction 2</span><br />eduaction 2</li>
                 <li>
-                  <span>eduaction 3</span><br />
-                  eduaction 3
+                  <span>2020</span><br />Fullstack Developer Acamica Academy
+                </li>
+                <li>
+                  <span>2017</span><br />Seismic Engineering Specialist from
+                  Universidad Eafit
+                </li>
+                <li>
+                  <span>2014</span><br />
+                  Civil Engineer from Universidad de los Andes
                 </li>
               </ul>
             </div>
@@ -123,34 +151,34 @@
             <i class="fas fa-code"></i>
             <h3>Software Engineer</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-              illo fugiat ipsa unde provident ea nisi vitae, magni tempora.
-              Nulla nisi adipisci consectetur fugit odit quisquam mollitia,
-              pariatur natus eius.
+              Design, develop, test and maintain applications with the help of
+              programming languages such as Python and JAVA, this applications
+              are cloud based being AWS service the most used. Knows about cloud
+              principles and how to manage the applications.
             </p>
-            <a href="#">Learn more</a>
+            <a href="https://github.com/dcabulo">Learn more</a>
           </div>
           <div>
             <i class="fa-solid fa-crop-simple"></i>
             <h3>Fullstack Developer</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-              illo fugiat ipsa unde provident ea nisi vitae, magni tempora.
-              Nulla nisi adipisci consectetur fugit odit quisquam mollitia,
-              pariatur natus eius.
+              Develop web applications, the front-end part in React Js library
+              or Vue Framework; for the back-end typescript and python, the
+              services were deploy using the AWS services.
             </p>
-            <a href="#">Learn more</a>
+            <a href="https://github.com/dcabulo">Learn more</a>
           </div>
           <div>
-            <i class="fa-brands fa-app-store"></i>
+            <i class="fa-solid fa-flask-vial"></i>
             <h3>Test Automation Engineer</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-              illo fugiat ipsa unde provident ea nisi vitae, magni tempora.
-              Nulla nisi adipisci consectetur fugit odit quisquam mollitia,
-              pariatur natus eius.
+              Automate repetive task using automation tools like Selenium for
+              Web or Appium for mobile applications, following the best
+              practices of testing like POM. These automated test helps improve
+              product delivery times and follow the requirements of the
+              application.
             </p>
-            <a href="#">Learn more</a>
+            <a href="https://github.com/dcabulo">Learn more</a>
           </div>
         </article>
       </div>
@@ -163,25 +191,27 @@
           <div class="work">
             <img src="assets/work-1.png" alt="my work image one" />
             <div class="layer">
-              <h4>Social Media App</h4>
+              <h4>Report and Log of Send Email App</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-                odio quis, ipsa reprehenderit aspernatur amet commodi
-                repudiandae tempore quos. Ab, esse pariatur. Nemo accusantium ea
-                ducimus alias ab aut esse!
+                In this project, we create an app to generate reports and logs
+                for the client. These reports contain information about emails
+                campaing created by the client. <br /><br />
+                The last part of the app create a sample of the attachement that
+                was send to the user.
               </p>
-              <a href="#"><i class="fa-solid fa-link"></i></a>
+              <a href="https://websendlink.linktic.com/"
+                ><i class="fa-solid fa-link"></i
+              ></a>
             </div>
           </div>
           <div class="work">
             <img src="assets/work-2.png" alt="my work image one" />
             <div class="layer">
-              <h4>Second work</h4>
+              <h4>Profile App</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-                odio quis, ipsa reprehenderit aspernatur amet commodi
-                repudiandae tempore quos. Ab, esse pariatur. Nemo accusantium ea
-                ducimus alias ab aut esse!
+                An app for you to download with my portafolio, you can have all
+                my information in an android app. This app was created using
+                Flutter.
               </p>
               <a href="#"><i class="fa-solid fa-link"></i></a>
             </div>
@@ -189,21 +219,22 @@
           <div class="work">
             <img src="assets/work-3.png" alt="my work image one" />
             <div class="layer">
-              <h4>Third work</h4>
+              <h4>Jenkins integration</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-                odio quis, ipsa reprehenderit aspernatur amet commodi
-                repudiandae tempore quos. Ab, esse pariatur. Nemo accusantium ea
-                ducimus alias ab aut esse!
+                In this project we create a jenkins pipeline to implement and
+                integrate continuos delivery to a maven project. The project was
+                written in JAVA.
               </p>
-              <a href="#"><i class="fa-solid fa-link"></i></a>
+              <a href="https://github.com/dcabulo/jenkinsIntegrationMaven"
+                ><i class="fa-solid fa-link"></i
+              ></a>
             </div>
           </div>
         </article>
-        <a href="#" class="btn">See More</a>
+        <a href="https://github.com/dcabulo" class="btn">See More</a>
       </div>
     </section>
-    <!-- -----Portafolio---------- -->
+    <!-- -----Contact---------- -->
     <section id="contact">
       <div class="container">
         <div class="row">
@@ -211,9 +242,15 @@
             <h2>Contact Me</h2>
             <p><i class="fa-solid fa-paper-plane"></i>gcabulo@gmail.com</p>
             <div class="social-icons">
-              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/dcabulo/"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
+              <a href="https://twitter.com/dgcabulo"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a href="https://github.com/dcabulo"
+                ><i class="fa-brands fa-github"></i
+              ></a>
             </div>
           </div>
           <div class="contact-right">
