--- a/index.html
+++ b/index.html
@@ -61,21 +61,19 @@
             <p>
               I have been working in software and web development since 2019, Im
               a fullstack stack developer and test automation engineer. I also
-              like to learn about python and java development. I worked remotly
+              like to learn about Python and Java development. I worked remotly
               at Linktic S.A.S as a fullstack developer and right now i work at
               Globant.com as a Test automation engineer.
             </p>
 
             <div class="tab-titles">
-              <p class="tab-links active-link" onclick="openTab('skills')">
-                Skills
-              </p>
-              <p class="tab-links" onclick="openTab('experience')">
+              <p class="tab-links active-link" onclick="openTab('experience')">
                 Experience
               </p>
+              <p class="tab-links" onclick="openTab('skills')">Skills</p>
               <p class="tab-links" onclick="openTab('education')">Education</p>
             </div>
-            <div class="tab-contents active-tab" id="skills">
+            <div class="tab-contents" id="skills">
               <ul>
                 <li>
                   <span>Software Engineer</span><br />Create API rest
@@ -91,7 +89,7 @@
                 </li>
               </ul>
             </div>
-            <div class="tab-contents" id="experience">
+            <div class="tab-contents active-tab" id="experience">
               <ul>
                 <li>
                   <span>Test Automation Engineer at Globant.com</span><br />At
@@ -103,7 +101,7 @@
                 </li>
                 <li>
                   <span>Fullstack Stack Developer at Linktic S.A.S</span
-                  ><br />At LINKTIC my job is to perform serverless functions
+                  ><br />At LINKTIC my job was to perform serverless functions
                   (Lambdas AWS), perform tests and maintain them. Building cloud
                   infrastructure with the help of the AWS cloudFormation
                   service. Additionally, creation of key-value tables like
@@ -111,8 +109,8 @@
                   such as SQS, API gateway, ECS, OpenSearch and lambda functions
                   for the client requirements all of this task are written in
                   PYTHON and TYPESCRIPT.<br /><br />
-                  Another part of my task is help to build interfaces in react
-                  js and vue js in the front-end area.
+                  Another part of my task is help to build interfaces in React
+                  js and Vue js in the front-end area.
                 </li>
                 <li>
                   <span>Junior developer at Talent.com </span><br />
@@ -189,7 +187,7 @@
         <h2>My Work</h2>
         <article class="work-list">
           <div class="work">
-            <img src="assets/work-1.png" alt="my work image one" />
+            <img src="assets/mail.jpg" alt="my work image one" />
             <div class="layer">
               <h4>Report and Log of Send Email App</h4>
               <p>
@@ -205,7 +203,7 @@
             </div>
           </div>
           <div class="work">
-            <img src="assets/work-2.png" alt="my work image one" />
+            <img src="assets/app.jpg" alt="my work image one" />
             <div class="layer">
               <h4>Profile App</h4>
               <p>
@@ -217,7 +215,7 @@
             </div>
           </div>
           <div class="work">
-            <img src="assets/work-3.png" alt="my work image one" />
+            <img src="assets/jenkins.png" alt="my work image one" />
             <div class="layer">
               <h4>Jenkins integration</h4>
               <p>
