feat: Added profile picture and url to apk

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="row">
           <article class="about-col-1">
-            <img src="assets/user.png" alt="profile-pic" />
+            <img src="assets/ProfilePic.PNG" alt="profile-pic" />
           </article>
           <article class="about-col-2">
             <h2>About Me</h2>
@@ -209,9 +209,12 @@
               <p>
                 An app for you to download with my portafolio, you can have all
                 my information in an android app. This app was created using
-                Flutter.
+                Flutter.(Dowload from drive, just for android phones)
               </p>
-              <a href="#"><i class="fa-solid fa-link"></i></a>
+              <a
+                href="https://drive.google.com/drive/folders/1BI1eJe-Ue7fDmmPcATLmILcG3dS3urAy?usp=sharing"
+                ><i class="fa-solid fa-link"></i
+              ></a>
             </div>
           </div>
           <div class="work">
